--- a/ApiSample/Properties/launchSettings.json
+++ b/ApiSample/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "ApiSample": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "PayLoad",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
